--- a/components/about/about.module.scss
+++ b/components/about/about.module.scss
@@ -1,10 +1,9 @@
 .about {
-  // padding: 0 1rem;
   width: 56rem;
   max-width: 100%;
   margin: 0 auto;
-  margin-bottom: 6rem;
-  margin-top: 6rem;
+  margin-bottom: 8rem;
+  margin-top: 8rem;
 
   h1 {
     margin-bottom: 2.5rem;
