--- a/components/contact/index.module.scss
+++ b/components/contact/index.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 6rem;
+  margin-bottom: 8rem;
 
   h1 {
     margin-bottom: 2.5rem;
